--- a/goback.html
+++ b/goback.html
@@ -16,6 +16,8 @@
                    <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9><br>
                     <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9><br>
 </div>
+  <img class="laptop" src="images/morning-quotes-1641333231.jpg"><br><img  class="laptop" src="images/Nelsson_Mandela-1536x831.webp">
+ 
                 </body>
                 <div class="para">
                     website updated on:11 May-2025<br>
@@ -48,6 +50,10 @@
     padding-top: 1%;
     padding-bottom: 1%;
    
+  }
+  .pics{
+    height: 250px;
+    width: 250px;
   }
 </style>
 </html>
