--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -17,6 +17,7 @@
     </marquee>
     <hr>
         <div class="border">
+                  <a href="otherwebsite.html"><img class="laptop" src="images/website-background-sdki780prxb1nfs5.jpg"></a><h9 class="te">other-website</h9>
                                                     <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">additional page</h9><br> 
               <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">instructions/contacts</h9><br>
            <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
