--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -21,12 +21,12 @@
                    <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9><br>
                     <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9><br>
     <div class="box">
-        <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><br>
-        <a href="https://www.cbse.gov.in/"><img class="laptop" src="images/cbse.webp"></a><br>
-        <a href="https://cblu.ac.in/"><img class="laptop" src="images/cblu.png"></a><br>
-          <a href="https://gjust.ac.in/"><img class="laptop" src="images/gju.png"></a><br>
-          <a href="https://kuk.ac.in/"><img class="laptop" src="images/kuk.png"></a><br>
-          <a href="https://mdu.ac.in/"><img class="laptop" src="images/mdu.jpeg"></a>
+        <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><h9 class="te">HBSE</h9><br>
+        <a href="https://www.cbse.gov.in/"><img class="laptop" src="images/cbse.webp"></a><h9 class="te">CBSE</h9><br>
+        <a href="https://cblu.ac.in/"><img class="laptop" src="images/cblu.png"></a><h9 class="te">CBLU</h9><br>
+          <a href="https://gjust.ac.in/"><img class="laptop" src="images/gju.png"></a><h9 class="te">GJU</h9><br>
+          <a href="https://kuk.ac.in/"><img class="laptop" src="images/kuk.png"></a><h9 class="te">KUK</h9><br>
+          <a href="https://mdu.ac.in/"><img class="laptop" src="images/mdu.jpeg"></a><h9 class="te">MDU</h9>
     </div>
 </body>
 <style>
@@ -43,7 +43,9 @@
     padding-bottom: 1%;
   }
   .te{
+    text-align: center;
     margin-left: 2cm;
+    color:black;
   }
   a{
     text-decoration: none;
