--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -16,11 +16,8 @@
     <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
 </marquee>
              <div class="border">
-                                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">additional page</h9><br> 
-              <a href="index.html"><img  class="laptop" src="images/home.jpg"></a><h9 class="te">instructions/contacts</h9><br>
-           <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
-                     <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9><br>
-  </div>
+                                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go-back</h9><br> 
+   </div>
   <hr>
   <div class="box"> 
  <div id="slides"> 
