--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   </head>
 <body>
-    <div class="border">
-                                              <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">additional page</h9><br> 
-             <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
-                   <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9><br>
-                    <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9><br>
-  </div>
-  <marquee class="mar">
-        <h2 <style'font-size:100px;'>&#9749;</style>instructions/contacts section</h2>
+   <marquee class="mar">
+        <h2 <style'font-size:100px;'>&#9749;</style>home sectionsection</h2>
     </marquee>
     <hr>
+    <div class="border">
+                                         <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">additional page</h9><br> 
+                  </div>
     <hr>  
     <div class="card-header"> 
       <div class="card">
