--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -15,12 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-                          <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">home section</h9><br>
-                                              <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">additional page</h9><br> 
-             <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
-                   <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9><br>
-                    <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9><br>
-    <div class="box">
+                                               <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go-back</h9><br> 
+     <div class="box">
         <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><h9 class="te">HBSE</h9><br>
         <a href="https://www.cbse.gov.in/"><img class="laptop" src="images/cbse.webp"></a><h9 class="te">CBSE</h9><br>
         <a href="https://cblu.ac.in/"><img class="laptop" src="images/cblu.png"></a><h9 class="te">CBLU</h9><br>
