--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -16,9 +16,7 @@
         <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
     </marquee>
     <hr>
-        <div class="border">
                                                     <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go-back</h9><br> 
-    </div>
     <hr>
     <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
     <hr>
@@ -110,19 +108,16 @@
           .border{
     background-color: forestgreen;
   }
-  .te{
+ .te{
     text-align: center;
     margin-left: 2cm;
-    color: black;
+    color:greenyellow;
   }
   .laptop{
-     margin-left: 1cm;
-    gap: 2cm;
-    display: flex;
+        margin-left: 1cm;
+        margin-right: 1cm;
     height: 150px;
     width: 250px;
-    padding-top: 1%;
-    padding-bottom: 1%;
   }
         table th td tr.colsetwidth{
             width: 50%;
