--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -15,6 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+   <marquee class="mar">
+        <h2 <style'font-size:100px;'>&#9749;</style>other websites</h2>
+    </marquee>
                                                <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go-back</h9><br> 
      <div class="box">
         <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><h9 class="te">HBSE</h9><br>
@@ -29,19 +32,16 @@
     body{
         background-color: chartreuse;
     }
-    .laptop{
-     margin-left: 1cm;
-    gap: 2cm;
-    display: flex;
-    height: 150px;
-    width: 250px;
-    padding-top: 1%;
-    padding-bottom: 1%;
-  }
-  .te{
+     .te{
     text-align: center;
     margin-left: 2cm;
-    color:black;
+    color:grey;
+  }
+  .laptop{
+        margin-left: 1cm;
+        margin-right: 1cm;
+    height: 150px;
+    width: 250px;
   }
   a{
     text-decoration: none;
