--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -15,9 +15,7 @@
     <marquee direction="left" scrollamount="4" scrolldelay="3">
     <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
 </marquee>
-             <div class="border">
                                                         <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go-back</h9><br> 
-   </div>
   <hr>
   <div class="box"> 
  <div id="slides"> 
@@ -132,19 +130,16 @@
       .border{
     background-color: forestgreen;
   }
-  .te{
+   .te{
     text-align: center;
     margin-left: 2cm;
-    color: black;
+    color:greenyellow;
   }
   .laptop{
-   margin-left: 1cm;
-    gap: 2cm;
-    display: flex;
+        margin-left: 1cm;
+        margin-right: 1cm;
     height: 150px;
     width: 250px;
-    padding-top: 1%;
-    padding-bottom: 1%;
   }
     a{
         color: dimgrey;
