--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>deepak website</title>
+    <link rel="goback.html">
     <link rel="styleshhet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="index.js"></script>
@@ -16,12 +17,10 @@
   </head>
 <body>
    <marquee class="mar">
-        <h2 <style'font-size:100px;'>&#9749;</style>home sectionsection</h2>
+        <h2 <style'font-size:100px;'>&#9749;</style>home section</h2>
     </marquee>
     <hr>
-    <div class="border">
-                                         <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">additional page</h9><br> 
-                  </div>
+                                         <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">Click on back arrow</h9><br> 
     <hr>  
     <div class="card-header"> 
       <div class="card">
@@ -156,23 +155,16 @@ and you can write your problems ,then i will suggest you</h4>
 <hr>
 </body>
 <style>
-  .border{
-    background-color: forestgreen;
-  }
   .te{
     text-align: center;
     margin-left: 2cm;
-    color:black;
+    color:greenyellow;
   }
   .laptop{
         margin-left: 1cm;
-    gap: 2cm;
-    display: flex;
+        margin-right: 1cm;
     height: 150px;
     width: 250px;
-    padding-top: 1%;
-    padding-bottom: 1%;
-   
   }
   .h{
     background-color: violet;
