--- a/notes.html
+++ b/notes.html
@@ -15,9 +15,7 @@
    <marquee direction="left" scrollamount="4" scrolldelay="3">
     <h2 <style'font-size:100px;'>&#9749;</style>RANDOM NOTES SECTION</h2>
 </marquee>
-          <div class="border">
-                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go-back</h9><br> 
-   </div>
+                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">click on back arrow<h9><br> 
  <hr>
  <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
   <hr>  
@@ -64,19 +62,16 @@ background-repeat: no-repeat;
       .border{
     background-color: forestgreen;
   }
-  .te{
+   .te{
     text-align: center;
     margin-left: 2cm;
-    color: black;
+    color:greenyellow;
   }
   .laptop{
-    margin-left: 1cm;
-    gap: 2cm;
-    display: flex;
+        margin-left: 1cm;
+        margin-right: 1cm;
     height: 150px;
     width: 250px;
-    padding-top: 1%;
-    padding-bottom: 1%;
   }
     a{
         color: palevioletred;
