--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -16,7 +16,7 @@
         <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
     </marquee>
     <hr>
-                                                    <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go-back</h9><br> 
+                                                    <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">Click on back arrow</h9><br> 
     <hr>
     <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
     <hr>
@@ -117,7 +117,7 @@
         margin-left: 1cm;
         margin-right: 1cm;
     height: 150px;
-    width: 250px;
+    width: 300px;
   }
         table th td tr.colsetwidth{
             width: 50%;
