--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -18,7 +18,7 @@
    <marquee class="mar">
         <h2 <style'font-size:100px;'>&#9749;</style>other websites</h2>
     </marquee>
-                                               <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go-back</h9><br> 
+                                               <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">Click on back arrow</h9><br> 
      <div class="box">
         <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><h9 class="te">HBSE</h9><br>
         <a href="https://www.cbse.gov.in/"><img class="laptop" src="images/cbse.webp"></a><h9 class="te">CBSE</h9><br>
@@ -41,7 +41,7 @@
         margin-left: 1cm;
         margin-right: 1cm;
     height: 150px;
-    width: 250px;
+    width: 300px;
   }
   a{
     text-decoration: none;
