--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -15,7 +15,7 @@
     <marquee direction="left" scrollamount="4" scrolldelay="3">
     <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
 </marquee>
-                                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go-back</h9><br> 
+                                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">Click on back arrow</h9><br> 
   <hr>
   <div class="box"> 
  <div id="slides"> 
