--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -16,7 +16,7 @@
         <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
     </marquee>
     <hr>
-                                                    <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">Click on back arrow</h9><br> 
+                                                    <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9><br> 
     <hr>
     <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
     <hr>
@@ -110,13 +110,15 @@
   }
  .te{
     text-align: center;
-    margin-left: 2cm;
     color:greenyellow;
+    margin-left: 2cm;
   }
   .laptop{
         margin-left: 1cm;
         margin-right: 1cm;
     height: 150px;
+    border-radius: 5cm;
+    
   }
         table th td tr.colsetwidth{
             width: 50%;
