--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -16,7 +16,7 @@
     <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
 </marquee>
 <hr>
-                                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">Click on back arrow</h9><br> 
+                                                        <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">Click on thisarrow</h9><br> 
   <hr>
   <div class="box"> 
  <div id="slides"> 
@@ -137,6 +137,7 @@
         margin-left: 1cm;
         margin-right: 1cm;
     height: 150px;
+    border-radius: 5cm;
   }
     a{
         color: dimgrey;
