--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2 <style'font-size:100px;'>&#9749;</style>home section</h2>
     </marquee>
     <hr>
-                                         <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">Click on back arrow</h9><br> 
+                                         <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9><br> 
     <hr>  
     <div class="card-header"> 
       <div class="card">
@@ -164,6 +164,7 @@ and you can write your problems ,then i will suggest you</h4>
         margin-left: 1cm;
         margin-right: 1cm;
     height: 150px;
+    border-radius: 5cm;
   }
   .h{
     background-color: violet;
