--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -18,7 +18,7 @@
    <marquee class="mar">
         <h2 <style'font-size:100px;'>&#9749;</style>other websites</h2>
     </marquee>
-                                               <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">Click on back arrow</h9><br> 
+                                               <a href="goback.html"><img class="lapto" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9><br> 
      <div class="box">
         <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><h9 class="te">HBSE</h9><br>
         <a href="https://www.cbse.gov.in/"><img class="laptop" src="images/cbse.webp"></a><h9 class="te">CBSE</h9><br>
@@ -35,13 +35,23 @@
      .te{
     text-align: center;
     margin-left: 2cm;
-    color:grey;
+    color:black;
+  }
+  .lapto{
+    height: 150px;
+    border-radius: 5cm;
   }
   .laptop{
-        margin-left: 1cm;
-        margin-right: 1cm;
+       margin-left: 1cm;
+    gap: 2cm;
+    display: flex;
     height: 150px;
-  }
+    width: 250px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+   
+  }  
+  
   a{
     text-decoration: none;
     text-align: center;
