--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -20,17 +20,47 @@
     </marquee>
                                                <a href="goback.html"><img class="lapto" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9><br> 
      <div class="box">
+      <div class="deep1"> 
         <a href="https://bseh.org.in/home/"><img class="laptop" src="images/hbse.png"></a><h9 class="te">HBSE</h9><br>
+        </div>
+        <div class="deep2"> 
         <a href="https://www.cbse.gov.in/"><img class="laptop" src="images/cbse.webp"></a><h9 class="te">CBSE</h9><br>
+        </div>
+        <div class="deep3"> 
         <a href="https://cblu.ac.in/"><img class="laptop" src="images/cblu.png"></a><h9 class="te">CBLU</h9><br>
+        </div>
+        <div class="deep4"> 
           <a href="https://gjust.ac.in/"><img class="laptop" src="images/gju.png"></a><h9 class="te">GJU</h9><br>
+          </div>
+          <div class="deep5"> 
           <a href="https://kuk.ac.in/"><img class="laptop" src="images/kuk.png"></a><h9 class="te">KUK</h9><br>
+          </div>
+          <div class="deep6"> 
           <a href="https://mdu.ac.in/"><img class="laptop" src="images/mdu.jpeg"></a><h9 class="te">MDU</h9>
+          </div>
     </div>
 </body>
 <style>
     body{
         background-color: chartreuse;
+    }
+    .deep1{
+      background-color: aquamarine;
+    }
+    .deep2{
+      background-color: green;
+    }
+    .deep3{
+      background-color: red;
+    }
+    .deep4{
+      background-color: cadetblue;
+    }
+    .deep5{
+      background-color: deeppink;
+    }
+    .deep6{
+      background-color: yellow;
     }
      .te{
     text-align: center;
