--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <hr>
 <div class="box-56"> 
   <h2 class="dep-78">NOTICES</h2>
-  <marquee direction="down" scrollamount="4" scrolldelay="4">
+  <marquee direction="up" scrollamount="4" scrolldelay="4">
     <h6>12th (medical/non-medical) question-paper-2025 released <sup class="red">11-04-2025</h6>
     <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper <sup class="red">10-01-2025</h6>
     <hr>
