--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   </head>
 <body>
-   <marquee class="mar">
-        <h2 <style'font-size:100px;'>&#9749;</style>home section</h2>
-    </marquee>
-    <hr>
-                                         <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9><br> 
-    <hr>  
+   <img  class="genius" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTNrbmJpNXhpMTl0dHh2NTYxZ296MTNncXh1dTkwbnE0eW9vYnFpbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/7fSp8PUG1L5eHVZbHz/giphy.gif">
+   <br><a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9>
+                                         <hr>  
     <div class="card-header"> 
       <div class="card">
       <div class="card-body">
@@ -55,18 +52,18 @@
 <div class="box-56"> 
   <h2 class="dep-78">NOTICES</h2>
   <marquee direction="up" scrollamount="4" scrolldelay="4">
-    <h6>12th (medical/non-medical) question-paper-2025 released <sup class="red">11-04-2025</h6>
-    <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper <sup class="red">10-01-2025</h6>
+    <h6>12th (medical/non-medical) question-paper-2025 released <sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
+    <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <hr>
-    <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes<sup class="red">01-11-2024</h6>
+    <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <hr>
-    <h6>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
+    <h6>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
   <hr>
-  <h6> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded</h6>
+  <h6> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
   <hr>
-  <h6>Complete website and its contents updated</h6>    
+  <h6>Complete website and its contents updated<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>    
   <hr>
-  <h6 >Foundation of cs-1st sem(practical uploaded)<sup class="red">15-10-2024</h6>
+  <h6 >Foundation of cs-1st sem(practical uploaded)<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
   </marquee>
   </div>
   <hr>
@@ -155,14 +152,21 @@ and you can write your problems ,then i will suggest you</h4>
 <hr>
 </body>
 <style>
+  .genius{
+    margin-left: 2cm;
+  }
   .te{
     text-align: center;
     margin-left: 2.2cm;
     color:greenyellow;
   }
+  .genius{
+    height: 150px;
+  }
   .laptop{
         margin-left: 3cm;
     height: 150px;
+    width: 150px;
     border-radius: 5cm;
   }
   .h{
@@ -204,7 +208,6 @@ height: 40px;
     h6{
       color: azure;
       text-align: center;
-      background-color: darkslategray;
     }a{
       gap: 2cm;
     }
