--- a/goback.html
+++ b/goback.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
  </head>
-<>
+<body>
     <marquee class="mar">
           <h2 <style'font-size:100px;'>&#9749;</style>you are most welcome</h2>
-    </marquee>    
-      <div class="border"> 
+    </marquee>
+    <br>
+       <div class="border"> 
             <a href="otherwebsite.html"><img class="laptop" src="images/website-background-sdki780prxb1nfs5.jpg"></a><h9 class="te">other-website</h9>
                       <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">home section</h9><br>
                  <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
@@ -29,6 +30,7 @@
 <style>
   a{
      text-decoration: none;
+     color: red;
   }
     .para{
         background-color: cadetblue;
