--- a/goback.html
+++ b/goback.html
@@ -6,9 +6,12 @@
     <title>Document</title>
  </head>
 <body>
-    <marquee class="mar">
-          <h2 <style'font-size:100px;'>&#9749;</style>you are most welcome</h2>
-    </marquee>
+  <div class="breaking"> 
+      <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExeG0wNzNpOWo3MWVnenZycW8xbzcwMnFrb2RrZ3l1enE3dDZ5ejM2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/2yxkSUWYzgnsPje3X8/giphy.gif" width="350px" height="150px">
+     <marquee class="blink"> 
+      <a  href="https://drive.google.com/file/d/1VKDek3EHb_aKHlxj6ThtiVUbmWXFlqa9/view?usp=gmail">HBSE board result of 12th class<br> 2025-result is according to district wise <br>and subject wise</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup> 
+     </marquee>
+ </div>
     <br>
        <div class="border"> 
             <a href="otherwebsite.html"><img class="laptop" src="images/website-background-sdki780prxb1nfs5.jpg"></a><h9 class="te">other-website</h9>
@@ -21,7 +24,7 @@
  
                 </body>
                 <div class="para">
-                    website updated on:13 May-2025 AT 23:34 PM<br>
+                    website updated on:14 May at 00:49 AM<br>
                     Website maintained,devloped by DEEPAK AGGARWAL
                     <hr>
                     <h7>Contact:8684899869</h7>
@@ -43,6 +46,20 @@
     margin-left: 2cm;
     color:black;
   }
+  .breaking{
+    background-color: black;
+  }
+   .blink {
+                animation: blinker 1.5s linear infinite;
+                color: red;
+                font-family: sans-serif;
+            }
+
+            @keyframes blinker {
+                50% {
+                    opacity: 0;
+                }
+            }
   .border{
     background-color: blueviolet;
   }
@@ -62,6 +79,9 @@
   .pics{
     height: 250px;
     width: 250px;
+  }
+  h1{
+    background-color: blue;
   }
 </style>
 </html>
