--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 </div>
 <hr>
 <div class="box-56"> 
-  <h2 class="dep-78">NOTICES</h2>
-  <marquee direction="up" scrollamount="4" scrolldelay="4">
+   <img  class="annou" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExNDdnZG1uMG96NDZvYWpzMjZqOGU4bjRicHI5YWM0cHA1MnlrbGlmbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/G6upjxer9hS8QCGlAZ/giphy.gif" height="100px" width="200px"> 
+  <marquee direction="down" scrollamount="4" scrolldelay="4">
     <h6>12th (medical/non-medical) question-paper-2025 released <sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <hr>
@@ -162,6 +162,9 @@ and you can write your problems ,then i will suggest you</h4>
   }
   .genius{
     height: 150px;
+  }
+  .annou{
+    margin-left: 2cm;
   }
   .laptop{
         margin-left: 3cm;
