--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   </head>
-<body>
+ <body> 
    <img  class="genius" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTNrbmJpNXhpMTl0dHh2NTYxZ296MTNncXh1dTkwbnE0eW9vYnFpbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/7fSp8PUG1L5eHVZbHz/giphy.gif">
    <br><a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">Click on this arrow</h9>
                                          <hr>  
@@ -115,7 +115,7 @@ and you can write your problems ,then i will suggest you</h4>
             <td>1</td>
             <td><img class="gallery" src="  https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg" ></td>
             <td>Whatshap</td>
-            <td><a href="https://wa.me/91"><img  class="gallery"  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a></td>
+            <td><a href="https://wa.me/918684899869"><img  class="gallery"  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a></td>
           </tr>
           <tr>
             <td>2</td>
@@ -330,5 +330,5 @@ height: 40px;
        .card-footer{
         background-color: black;
        }
-    </style> 
+    </style>
 </html>
