--- a/goback.html
+++ b/goback.html
@@ -21,7 +21,6 @@
                     <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9><br>
 </div>
   <img class="laptop" src="images/morning-quotes-1641333231.jpg"><br><img  class="laptop" src="images/Nelsson_Mandela-1536x831.webp">
- 
                 </body>
                 <div class="para">
                     website updated on:14 May at 00:49 AM<br>
@@ -29,7 +28,6 @@
                     <hr>
                     <h7>Contact:8684899869</h7>
                 </div>
-                
 <style>
   a{
      text-decoration: none;
@@ -89,5 +87,6 @@
   h1{
     background-color: blue;
   }
-</style>
+    </style>
 </html>
+</head>
