--- a/notes.html
+++ b/notes.html
@@ -15,20 +15,18 @@
    <marquee direction="left" scrollamount="4" scrolldelay="3">
     <h2 <style'font-size:100px;'>&#9749;</style>RANDOM NOTES SECTION</h2>
 </marquee>
+<br>
                                         <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><br><h9 class="te">click on this arrow<h9><br> 
  <hr>
  <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
   <hr>  
-  <table class="table-bordered">
-    <tr>
-        <th>No.</th>
-        <th>Title</th>
-        <th>Action</th>
-    </tr>
-    <td>1</td>
-    <td>Solar system - Concept,components of solar<br> system ,interior of sun</td>
-    <td><a class="ab" href="https://drive.google.com/file/d/1DDV_4KAcGlkuNbJb0_g8b7JOhO_iZlRM/view?usp=drivesdk">download</td>
-  </table>
+  <div class="que">
+  <a href="https://drive.google.com/file/d/1Wn8qVaMlBcAJCTk3whyxITKugNyzrFVs/view?usp=gmail">Computer-concept in hindi</a><sub><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sub>  
+</div>
+<div class="box">
+  <a href="https://drive.google.com/file/d/1DDV_4KAcGlkuNbJb0_g8b7JOhO_iZlRM/view?usp=drivesdk">Solar system-concep</a>
+</div>
+<br>
  <style>  
      .card-1{
         background-color: cadetblue;
@@ -57,29 +55,21 @@
     border-radius: 5cm;
   }
     a{
-        color: palevioletred;
+        color: black;
         text-decoration: none;
         gap: 2cm;
-        text-shadow: 1px 1px palevioletred;
     }
     a:hover{
         color: chocolate;
     }
-   table th td tr.colsetwidth{
-    width: 50%;
-    border-radius: 14px;
-   }
    .ab{
     color: blue;
    }
    .ab:hover{
     color: aquamarine;
    }
-   td{
-    color: aquamarine;
-   }
-   th{
-    color: brown;
+   .que{
+    background-color: aliceblue;
    }
    .shalu{
     color: chartreuse;
@@ -90,6 +80,10 @@
    }
    a{
     gap: 2cm;
+   }
+   .box{
+    background-color: gold;
+    color: black;
    }
  </style>
 </body>
