--- a/goback.html
+++ b/goback.html
@@ -23,7 +23,7 @@
   <img class="laptop" src="images/morning-quotes-1641333231.jpg"><br><img  class="laptop" src="images/Nelsson_Mandela-1536x831.webp">
                 </body>
                 <div class="para">
-                    website updated on:14 May at 00:49 AM<br>
+                    website updated on:14 May at 20:43 PM<br>
                     Website maintained,devloped by DEEPAK AGGARWAL
                     <hr>
                     <h7>Contact:8684899869</h7>
