--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 <hr>
 <div class="box-56"> 
    <img  class="annou" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExNDdnZG1uMG96NDZvYWpzMjZqOGU4bjRicHI5YWM0cHA1MnlrbGlmbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/G6upjxer9hS8QCGlAZ/giphy.gif" height="100px" width="200px"> 
-  <marquee direction="down" scrollamount="4" scrolldelay="4">
+  <marquee direction="down" scrollamount="4" scrolldelay="3">
+    <h6><a href="https://drive.google.com/file/d/1-JzAmUfgKAVj2Mi_3izTpXKJcApvbNPm/view?usp=drivesdk">12th notes of electrostatics</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <h6>12th (medical/non-medical) question-paper-2025 released <sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <hr>
@@ -59,7 +60,7 @@
     <hr>
     <h6>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
   <hr>
-  <h6> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
+  <h6><a href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history)</a>model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
   <hr>
   <h6>Complete website and its contents updated<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>    
   <hr>
