--- a/goback.html
+++ b/goback.html
@@ -8,7 +8,7 @@
 <body>
   <div class="breaking"> 
       <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExeG0wNzNpOWo3MWVnenZycW8xbzcwMnFrb2RrZ3l1enE3dDZ5ejM2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/2yxkSUWYzgnsPje3X8/giphy.gif" width="360px" height="150px">
-      <marquee class="blink"> 
+      <marquee behavior="alternate" class="blink"> 
         <a  href="https://drive.google.com/file/d/1VKDek3EHb_aKHlxj6ThtiVUbmWXFlqa9/view?usp=gmail">HBSE board result of 12th class 2025<br>-result is according to district wise <br>and subject wise</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup>  
   </marquee>
  </div>
