--- a/goback.html
+++ b/goback.html
@@ -6,11 +6,17 @@
     <title>Document</title>
  </head>
 <body>
-  <div class="breaking"> 
+   <div class="breaking"> 
       <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExeG0wNzNpOWo3MWVnenZycW8xbzcwMnFrb2RrZ3l1enE3dDZ5ejM2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/2yxkSUWYzgnsPje3X8/giphy.gif" width="360px" height="150px">
-      <marquee behavior="alternate" class="blink"> 
-        <a  href="https://drive.google.com/file/d/1VKDek3EHb_aKHlxj6ThtiVUbmWXFlqa9/view?usp=gmail">HBSE board result of 12th class 2025<br>-result is according to district wise <br>and subject wise</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup>  
-  </marquee>
+      <marquee class="blink"> 
+        <table class="table table-bordered"> 
+          <tr> 
+        <td><a href="https://drive.google.com/file/d/1VKDek3EHb_aKHlxj6ThtiVUbmWXFlqa9/view?usp=gmail">HBSE board result of 12th class<br> 2025-result is according to district<br> wise and subject wise</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></td> 
+   &nbsp;&nbsp;&nbsp;&nbsp;
+        <td><a href="https://result.bsehexam2017.in/zxcmnbv/mainresult.aspx">12th HBSE<br> result-2025</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></td>
+      </tr>    
+  </table>
+    </marquee>
  </div>
      <br>
        <div class="border"> 
@@ -31,7 +37,7 @@
 <style>
   a{
      text-decoration: none;
-     color: white;
+     color: gold; 
   }
   a:hover{
     background-color: plum;
