--- a/goback.html
+++ b/goback.html
@@ -11,9 +11,9 @@
       <marquee class="blink"> 
         <table class="table table-bordered"> 
           <tr> 
-        <td><a href="https://drive.google.com/file/d/1VKDek3EHb_aKHlxj6ThtiVUbmWXFlqa9/view?usp=gmail">HBSE board result of 12th class<br> 2025-result is according to district<br> wise and subject wise</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></td> 
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <td><a href="https://result.bsehexam2017.in/zxcmnbv/mainresult.aspx">12th HBSE<br> result-2025</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></td>
+        <td><sup><b class="ty">||||</b><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup><a href="https://drive.google.com/file/d/1VKDek3EHb_aKHlxj6ThtiVUbmWXFlqa9/view?usp=gmail">HBSE board result of 12th class<br> 2025-result is according to district<br> wise and subject wise</a></td> 
+        <td><sup><b class="ty">||||</b><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup><a href="https://result.bsehexam2017.in/zxcmnbv/mainresult.aspx">12th HBSE  result-2025</a></td>
+             <td><sup><b class="ty">||||</b><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup><a href="https://result.bsehexam2017.in/ChjhueyeU/mainresult.aspx">10th HBSE result-2025</a></td>
       </tr>    
   </table>
     </marquee>
@@ -72,6 +72,9 @@
   }
   tr{
     gap: 15cm;
+  }
+  .ty{
+    color: black;
   }
   .laptop{
         margin-left: 1cm;
