--- a/goback.html
+++ b/goback.html
@@ -9,7 +9,7 @@
    <div class="breaking"> 
       <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExeG0wNzNpOWo3MWVnenZycW8xbzcwMnFrb2RrZ3l1enE3dDZ5ejM2OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/2yxkSUWYzgnsPje3X8/giphy.gif" width="360px" height="150px">
       <marquee class="blink"> 
-        <table> 
+        <table class="table-bordered"> 
           <tr> 
         <td><sup><b class="ty">||||</b><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup><a href="https://drive.google.com/file/d/1VKDek3EHb_aKHlxj6ThtiVUbmWXFlqa9/view?usp=gmail">HBSE board result of 12th class<br> 2025-result is according to district<br> wise and subject wise</a></td> 
         <td><sup><b class="ty">||||</b><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup><a href="https://result.bsehexam2017.in/zxcmnbv/mainresult.aspx">12th HBSE  result-2025</a></td>
