--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -42,8 +42,18 @@
                 <td>1</td>
                 <td>CBLU(<sup class="dep">1st sem.</sup>Human value<br> and Ethics notes for <br>all UG(AEC))</td>
                 <td><a href="https://drive.google.com/file/d/1zBpce-KjiDWzNgG52RkLxOJ8-bmjvlKB/view?usp=drivesdk">download</a></td>
-            </tr>   
-        </table>
+            </tr>  
+            <tr>
+                <td>2</td>
+                <td>CBLU(<sup class="dep"></sup><br>geograhy notes for <br>all UG())<MDC/td>
+                    <td><a href="https://drive.google.com/file/d/1tV0sv4ZMS6RBFuEj39UMkxlt4SxCHUgu/view?usp=drivesdk">download</a></td>
+            </tr>
+             <tr>
+                <td>3</td>
+                <td>CBLU(<sup class="dep"></sup><br>indian economy  notes for <br>all UG())<MDC/td>
+                    <td><a href="https://drive.google.com/file/d/1td9by7Q2UbsWwmXbnlDLyL3vVDYrajDy/view?usp=drivesdk">download</a></td>
+            </tr>
+         </table>
     </div>
         <div id="questionpaper" class="tab-pane fade">      
             <table class="table table-bordered">
