--- a/goback.html
+++ b/goback.html
@@ -29,7 +29,7 @@
   <img class="laptop" src="images/morning-quotes-1641333231.jpg"><br><img  class="laptop" src="images/Nelsson_Mandela-1536x831.webp">
                 </body>
                 <div class="para">
-                    website updated on:14 May at 20:43 PM<br>
+                    website updated on:4 JULY-2025 00:17 AM<br>
                     Website maintained,devloped by DEEPAK AGGARWAL
                     <hr>
                     <h7>Contact:8684899869</h7>
