--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <div class="card-h6">
      <h5> University:</h5><h3>Chaudhary Bansilal University</h3>
     <div class="card-footer">
-      <a  href="https://wa.me/8684899869"> only saved contacts <br>will display profile photo</a>
+      <a  href="https://wa.me/8684899869"><img src="https://static.vecteezy.com/system/resources/previews/012/162/809/non_2x/whatsapp-logo-3d-render-free-png.png"><h class="hjo">||||</h></a>
     <!----<a  href=" "><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>-->
      <!--- <a  href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a>--> 
-      <a  href="mailto:05aggarwaldeepak@gmail.com"><img  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a>    
+      <a  href="mailto:05aggarwaldeepak@gmail.com"><img  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a>  
        <h5 class="h">Contacts</h5>
     </div>
     </div>
@@ -49,7 +49,7 @@
 </div>
 <hr>
 <div class="box-56"> 
-   <img  class="annou" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExNDdnZG1uMG96NDZvYWpzMjZqOGU4bjRicHI5YWM0cHA1MnlrbGlmbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/G6upjxer9hS8QCGlAZ/giphy.gif" height="100px" width="200px"> 
+ <h1 class="cen">NOTIFICATIONS</h1>
   <marquee direction="down" scrollamount="4" scrolldelay="3">
     <h6><a href="https://drive.google.com/file/d/1-JzAmUfgKAVj2Mi_3izTpXKJcApvbNPm/view?usp=drivesdk">12th notes of electrostatics</a><sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
     <h6>12th (medical/non-medical) question-paper-2025 released <sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
@@ -61,7 +61,7 @@
   <hr>
   <h6><a href="https://drive.google.com/file/d/1y43mVSzaM8f35PguWXqvNzDxznUDcrn5/view?usp=drivesdk">12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history)</a>model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
   <hr>
-  <h6>Complete website and its contents updated<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>    
+  <img src="<h6>Complete website and its contents updated<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>    
   <hr>
   <h6 >Foundation of cs-1st sem(practical uploaded)<sup><img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTRpejU4a251YnV0N2ExcndrMmFhNnE0bndmcmNwNWh1YmxseHkzeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/rFsm3p6zCvScU/giphy.gif"></sup></h6>
   </marquee>
@@ -152,6 +152,12 @@ and you can write your problems ,then i will suggest you</h4>
 <hr>
 </body>
 <style>
+  .cen{
+    text-align: center;
+  }
+  .hjo{
+    color: black;
+  }
   .genius{
     margin-left: 2cm;
   }
