--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -52,8 +52,9 @@
                 <td>3</td>
                 <td>CBLU(<sup class="dep"></sup><br>indian economy  notes for <br>all UG())<MDC/td>
                     <td><a href="https://drive.google.com/file/d/1td9by7Q2UbsWwmXbnlDLyL3vVDYrajDy/view?usp=drivesdk">download</a></td>
-            </tr>
-         </table>
+           
+                </tr>
+             </table>
     </div>
         <div id="questionpaper" class="tab-pane fade">      
             <table class="table table-bordered">
@@ -65,7 +66,12 @@
             <td>1</td>
             <td>CBLU(<sup class="dep">1st sem.2025</sup> MAIN-questionpaper for all UG Courses Papaer are :MDC,AEC,SEC,VAC) Subjects:Human value and Ethics,Communicative Skills in English,Basic It Tools,CSR and business Ethics</td>
             <td><a href="https://drive.google.com/file/d/1-B2Bq14qhh1sSsnewiXO4JNvaWJoWcrC/view?usp=drivesdk">download</a></td> 
-    </table>
+    <tr>
+        <td>2</td>
+       <td>CBLU(<sup class="dep"></sup>question paper)</td>
+       <td><a href="">download</a></td>
+    </tr>
+        </table>
 </div>  
         <div id="practical" class="tab-pane fade">
             <table class="table table-bordered">
